@@ -71,6 +71,7 @@ Release 0.9.8
 - start porting plugins for new naming/code convention in group 'general';
   eventually this should replace the current 'request' group
 - make the used view available to listeners of the finalize_contents event
+- fix broken logic for using/skiping empty category pages
 
 Release 0.9.7
 - add ZMProductAssociation service and related code
